adding capabilities to create a struct field with the concept name and lineage